--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,33 +1,5 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+#!include:.gitignore
 
-# OS
-.DS_Store
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Typescript v1 declaration files
-typings/
-
-# Optional npm cache directory
-.npm
-
-# dotenv environment variables file
-.env
-.env.yaml
-
-# Git repository
+.gcloudignore
 .git
 .gitignore
-
-# This file
-.gcloudignore
-
-# Source TypeScript files
-src/
