--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,22 @@ yarn-error.log*
 # OS
 .DS_Store
 
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 # Dependency directories
 node_modules/
 jspm_packages/
