--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "main": "build/app.js",
   "config": {
-    "region": "asia-east2"
+    "region": "asia-east1"
   },
   "scripts": {
+    "build": "tsc -p .",
     "start": "functions-framework --target=$npm_config_function --port=$npm_config_port",
     "watch": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start --function=$npm_config_function --port=${npm_config_port:-8080}\"",
-    "build": "tsc -p .",
-    "deploy": "npm run build && gcloud functions deploy ${npm_config_endpoint:-$npm_config_function} --region=${npm_config_region:-$npm_package_config_region} --env-vars-file=.env.yaml --entry-point=$npm_config_function --runtime=nodejs12 --trigger-http"
+    "deploy": "gcloud functions deploy ${npm_config_endpoint:-$npm_config_function} --gen2 --runtime=nodejs20 --region=${npm_config_region:-$npm_package_config_region} --env-vars-file=.env.yaml --entry-point=$npm_config_function --trigger-http"
   },
   "devDependencies": {
-    "@tsconfig/node12": "^1.0.7",
+    "@tsconfig/node20": "^20.1.2",
     "@types/express": "^4.17.9",
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.6",
-    "typescript": "^4.1.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.7.1"
+    "@google-cloud/functions-framework": "^3.3.0"
   }
 }
